// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete File Expected failures should fail deleting a file that does not exist 1`] = `
"================Z/OS FILES DELETE FILE===============
"
`;

exports[`Delete File Success scenario without profiles should delete a uss file, with fully specified command 1`] = `
"================Z/OS FILES DELETE FILE FULLY SPECIFIED===============
USS File or directory deleted successfully.
"
`;

exports[`Delete File Success scenarios should delete a file 1`] = `
"================Z/OS FILES DELETE FILE===============
USS File or directory deleted successfully.
"
`;
